[package]
name = "tungstenite"
description = "Lightweight stream-based WebSocket implementation"
categories = ["web-programming::websocket", "network-programming"]
keywords = ["websocket", "io", "web"]
authors = ["Alexey Galakhov", "Daniel Abramov"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/snapview/tungstenite-rs"
documentation = "https://docs.rs/tungstenite/0.14.0"
repository = "https://github.com/snapview/tungstenite-rs"
version = "0.14.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
native-tls = []
native-tls-vendored = []
rustls-tls-native-roots = []
#native-tls = ["native-tls-crate"]
#native-tls-vendored = ["native-tls", "native-tls-crate/vendored"]
#rustls-tls-native-roots = ["__rustls-tls", "rustls-native-certs"]
rustls-tls-webpki-roots = ["__rustls-tls", "webpki-roots"]
__rustls-tls = ["rustls", "webpki"]

[dependencies]
base64 = { git = "https://github.com/mesalock-linux/rust-base64-sgx", tag = "sgx_1.1.3" }
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx", tag = "sgx_1.1.3" }
bytes = { git = "https://github.com/integritee-network/bytes-sgx", branch = "sgx-experimental" }
http = { git = "https://github.com/integritee-network/http-sgx", branch = "sgx-experimental" }
httparse = { git = "https://github.com/integritee-network/httparse-sgx", branch = "sgx-experimental", features = ["mesalock_sgx"], default-features = false }
log = { git = "https://github.com/Kailai-Wang/log-sgx", branch = "sgx-sdk-2.0.0" }
rand = { package = "sgx_rand", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-11-17" }
sha1 = { git = "https://github.com/mesalock-linux/rust-sha1-sgx", tag = "sgx_1.1.3" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx", tag = "sgx_1.1.3" }
url = { git = "https://github.com/mesalock-linux/rust-url-sgx", tag = "sgx_1.1.3" }
utf-8 = { git = "https://github.com/integritee-network/rust-utf8-sgx", branch = "sgx-experimental"  }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-11-17", features = ["net"] }

#[dependencies.native-tls-crate]
#optional = true
#package = "native-tls"
#version = "0.2.3"

[dependencies.rustls]
git = "https://github.com/mesalock-linux/rustls"
tag = "sgx_1.1.3"
optional = true

#[dependencies.rustls-native-certs]
#optional = true
#version = "0.5.0"

[dependencies.webpki]
git = "https://github.com/mesalock-linux/webpki"
branch = "mesalock_sgx"
optional = true

[dependencies.webpki-roots]
git = "https://github.com/mesalock-linux/webpki-roots"
tag = "sgx_1.1.3"
optional = true

[dev-dependencies]
#criterion = "0.3.4"
#env_logger = "0.9.0"
#input_buffer = "0.5.0"
#net2 = "0.2.33"
#rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "sgx_1.1.3" }

#[[bench]]
#name = "buffer"
#harness = false

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-11-17" }

